tempfile/derive_more/tests/compile_fail/as_ref/struct_attr_empty.rs
#[derive(derive_more::AsRef)]
#[as_ref(forward)]
struct Foo;

fn main() {}
